[MODINVOICE-617]. Incorrect encumbrances on orders with approved and cancelled invoices (#498)
* [MODINVOICE-617]. Incorrect encumbrances on orders with approved and cancelled invoices

* [MODINVOICE-617]. Fix unit tests, extract methods, clean methods

* [MODINVOICE-617]. Improve EncumbranceUtil